assets/User/Profile.scss
@import '../Layout/Variables';
@import '../Layout/Mixins';
@import '~bootstrap/scss/mixins';
@import 'VerificationIcon';

// Achievements tab:
.horizontal-scrolling-wrapper {
  display: flex;
  flex-wrap: nowrap;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;

  > div {
    flex: 0 0 auto;
  }

  > div + div {
    margin-left: 1rem;
  }
}

.avatar-container {
  text-align: center;

  img {
    @media screen and (width <= 576px) {
      width: 90%;
      max-width: 15rem !important;
    }
  }
}

.button-container {
  align-self: flex-end;
  text-align: right;

  button {
    margin-bottom: 0.2em;
  }
}

/* follower section */
.follower-item {
  a {
    &:hover {
      text-decoration: none;
    }
  }

  img.round {
    max-width: 4rem;
    max-height: 4rem;
    aspect-ratio: 1;
    object-fit: cover;
  }

  &__info {
    font-size: 0.7em;
    white-space: normal;

    .info-icon {
      font-size: 1.2em;
    }
  }

  .follow-btn {
    .btn {
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }
}

/* should be general */
.round {
  border-radius: 100%;
}

#user-information {
  .button-container button {
    min-width: 150px;

    @include media-breakpoint-down(sm) {
      display: block;
      width: 100%;
    }
  }
}

.tab-bar-container {
  #scroll-area {
    overflow: auto;
  }
}

.follower-tabs {
  margin-top: -1rem;
}

.mdc-select:not(.mdc-select--disabled).mdc-select--focused .mdc-floating-label {
  color: var(--mdc-theme-primary);
}

/* NEW MY PROFILE PAGE */
.profile {
  &__basic-info {
    display: flex;
    flex-direction: row;
    margin-bottom: 1.5rem;

    &__avatar {
      flex: 0 0 8rem;
      margin-right: 1.5rem;
      position: relative;
      cursor: pointer;

      @include media-breakpoint-up(lg) {
        flex-basis: 12rem;
      }

      &__img {
        border-radius: 100%;
        width: 100%;
        height: auto;
      }

      &__btn-change {
        position: absolute;
        top: calc(8rem - 3rem);

        @include media-breakpoint-up(lg) {
          top: calc(12rem - 3rem);
        }

        right: 0;
        width: 3rem;
        height: 3rem;
        background-color: rgb(0 0 0 / 40%);
        color: white;
        border-radius: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
      }
    }

    &__text {
      &__name {
        font-size: 2rem;

        @include force-word-break;
      }
    }
  }

  &__description {
    &__about {
      margin-bottom: 0.5rem;
    }

    &__status {
      &__label {
        font-weight: bold;
      }
    }
  }

  &__user-settings {
    .nav-link {
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: flex-start;
      padding-top: 1rem;
      padding-bottom: 1rem;
      color: #222;
      text-decoration: none;
      cursor: pointer;

      &:hover {
        text-decoration: none;
        background: rgb(0 0 0 / 20%);
      }

      &:active,
      &:focus {
        text-decoration: none;
      }
    }

    .link-icon {
      flex-shrink: 0;
      width: 2.5rem;
      padding-right: 0.5rem;
      text-align: center;
      font-size: 1.6rem;
    }

    .link-text {
      @include force-word-break;

      font-size: 1.3rem;
      flex-grow: 1;
      overflow: hidden;
    }
  }
}

.loading-spinner-backdrop {
  background: light-dark(rgb(255 255 255 / 70%), rgb(0 0 0 / 70%));
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

